Improved display names for parameterized tests.